--- a/src/main/resources/assets/midnight-hats/lang/en_us.json
+++ b/src/main/resources/assets/midnight-hats/lang/en_us.json
@@ -1,4 +1,4 @@
 {
-	"text.autoconfig.hats.title":"MidnightHats Config",
-	"text.autoconfig.hats.option.event_hats":"Enable Event Hats"
+	"text.autoconfig.midnight-hats.title":"MidnightHats Config",
+	"text.autoconfig.midnight-hats.option.event_hats":"Enable Event Hats"
 }
